2009-11-23  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FileFormatToolbox/dcm2metaimage:

	- Fix bug with wrong function call.

2009-11-04  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* README:

	- Add scirunnrrd_index2world.m and scirunnrrd_world2index.m.

	* Add FileFormatToolbox/scirunnrrd_index2world.m:

	- SCIRUNNRRD_INDEX2WORLD Convert data volume indices to real world
	coordinates for NRRD volumes created by SCI
	applications (e.g. Seg3D).

	* Add FileFormatToolbox/scirunnrrd_world2index.m:

	- SCIRUNNRRD_WORLD2INDEX Convert real world coordinates to data
	volume indices for NRRD volumes created by SCI
	applications (e.g. Seg3D).

2009-09-11  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add PointsToolbox/PointsToolbox/cube_five_tessellation.m:

	- CUBE_FIVE_TESSELLATION Tessellation in 5 tetrahedra of a cube
	with perpendicular diagonals on opposite sides of the
	cube (non-stackable).

2009-09-10  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add PointsToolbox/PointsToolbox/cube_stackable_tessellation.m:

	- CUBE_STACKABLE_TESSELLATION  Tessellation in tetrahedra of a
	cube that can be stacked in a regular mesh.

2009-09-09  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add PointsToolbox for functions that deal with points.

	* Create directories for FileFormatToolbox and FiltersToolbox, and
	split existing functions accordingly. As more functions are added
	to the project, we'll need to organize them anyway.

2009-07-16  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* First public release to project Gerardus in Google Code of this
	Matlab Toolbox.

	- http://code.google.com/p/gerardus

	* Add README with help for functions in the Toolbox.

	* WriteMetaFile.h -> WriteRawFile.h:

	- Correct name, as "Meta" could refer to MetaImage, the format
	that includes both the mha header and the raw file.

	* dcm2metadata.m -> dcm2metaimage.m, im2metadata.m ->
	im2metaimage.m:
	
	Correct filenames and function names, because we are create